assets/css/tech_stack.css
@media only screen and (max-width: 1200px) {
    #custom-section  {
        --tagcloud-diameter: 28rem;
        --tag-diameter: 5rem;
        --tag-font-size: 0.9rem;
    }
}

@media only screen and (max-width: 992px) {
    #custom-section  {
        --tagcloud-diameter: 24rem;
        --tag-diameter: 4.5rem;
        --tag-font-size: 0.8rem;
    }
}

@media only screen and (max-width: 768px) {
    #custom-section  {
        --tagcloud-diameter: 20rem;
        --tag-diameter: 4rem;
        --tag-font-size: 0.7rem;
    }
}

@media only screen and (max-width: 576px) {
    #custom-section  {
        --tagcloud-diameter: 16rem;
        --tag-diameter: 3.5rem;
        --tag-font-size: 0.6rem;
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100vh;
        width: 100vw;
        background-color: rgb(var(--tagcloud-bg-color-rgb)) !important;
        overflow: hidden;
    }
    
}

@media only screen and (max-width: 400px) {
    #custom-section  {
        --tagcloud-diameter: 14rem;
        --tag-diameter: 3rem;
        --tag-font-size: 0.5rem;
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100vh;
        width: 100vw;
        background-color: rgb(var(--tagcloud-bg-color-rgb)) !important;
        overflow: hidden;
    }
}
/*
vars
*/
#custom-section  {
--tagcloud-transition-user-duration: 1250ms;
--tagcloud-transition-user-ease: ease-in-out;
--tagcloud-transition-duration: 250ms;
--tagcloud-transition-ease: ease-out;
--tagcloud-bg-color-rgb: 245, 245, 245;
--tagcloud-animation-duration: 25s;
--tagcloud-animation-direction: normal;
--tagcloud-animation-play-state: running;
--tagcloud-diameter: 32rem;
--tagcloud-start-rotation: 54;
--tagcloud-controls-diameter: 256rem;
--tagcloud-control-bg-color: transparent;
--tagcloud-control-bg-hover-color: transparent;
--tagcloud-control-bg-checked-color: transparent;
--tag-diameter: 5.5rem;
--tag-font-color-rgb: 0, 0, 0;
--tag-font-family: 'Open Sans', sans-serif;
--tag-font-size: 1rem;
}

/*
global
*/
@import url(//fonts.googleapis.com/css?family=Open+Sans);

/* Applying reset styles to specific elements */

#custom-section  
.tagcloud-wrapper, 
#custom-section  .tagcloud-control-button, 
#custom-section  .tagcloud-rotation, 
#custom-section  .tagcloud-tags, 
#custom-section  .tagcloud-tag,
#custom-section ::before, 
#custom-section  ::after, 
#custom-section .tagcloud-wrapper::before, 
#custom-section .tagcloud-wrapper::after, 
#custom-section .tagcloud-control-button::before, 
#custom-section .tagcloud-control-button::after, 
#custom-section .tagcloud-rotation::before, 
#custom-section .tagcloud-rotation::after, 
#custom-section .tagcloud-tags::before, 
#custom-section .tagcloud-tags::after, 
#custom-section .tagcloud-tag::before, 
#custom-section .tagcloud-tag::after {
margin: 0;
padding: 0;
border: 0;
box-sizing: border-box;
}

/* Removing outline for focus on specific elements */
#custom-section :focus, 
#custom-section .tagcloud-wrapper:focus, 
#custom-section .tagcloud-control-button:focus, 
#custom-section .tagcloud-rotation:focus, 
#custom-section .tagcloud-tags:focus, 
#custom-section .tagcloud-tag:focus {
outline: none;
}

#custom-section {
display: flex;
align-items: center;
justify-content: center;
height: 100vh;
background-color: rgb(var(--tagcloud-bg-color-rgb)) !important;
overflow: hidden;
}

/*
tagcloud
*/
#custom-section .tagcloud-wrapper {
--_control-diamater: var(--tagcloud-controls-diameter);
--_control-radius: calc(var(--_control-diamater) / 2);
--_diameter: var(--tagcloud-diameter);
--_radius: calc(calc(var(--_diameter) / 2) - calc(var(--tag-diameter) / 2));
width: var(--control-diameter);
aspect-ratio: 1 / 1;
font-family: var(--tag-font-family);
font-size: var(--tag-font-size);
}

@media only screen and (max-width: 48rem) {
.tagcloud-wrapper {
--_control-diamater: calc(var(--tagcloud-controls-diameter) * 0.5);
--_diameter: calc(var(--tagcloud-diameter) * 0.88);
}
}
@media only screen and (max-width: 32rem) {
.tagcloud-wrapper {
--_diameter: calc(var(--tagcloud-diameter) * 0.75);
}
}

.tagcloud-wrapper:has(.tagcloud-rotation:hover)  {
--tagcloud-animation-play-state: paused;
}

#custom-section .tagcloud-wrapper .tagcloud-tags {
position: absolute;
width: var(--_diameter);
aspect-ratio: 1 / 1;
left: 50%;
top: 50%;
transform: translate(-50%, -50%);
list-style-type: none;
position: relative;
transform-style: inherit;
animation: tagcloud-rotation var(--tagcloud-animation-duration) var(--tagcloud-animation-direction) linear infinite var(--tagcloud-animation-play-state);
}

@keyframes tagcloud-rotation {
from {transform: translate(-50%, -50%) rotateX(0deg);}
to {transform: translate(-50%, -50%) rotateX(360deg);}
}

#custom-section  .tagcloud-wrapper .tagcloud-tags:has(.tagcloud-tag div a:hover) .tagcloud-tag:not(:has(div a:hover)) {
opacity: 0.25;
}
/* ... */

